tests/sumo/spec/departure/errors/testsuite.sumo
# checks using to high lane number (lane 10)
lane_given10

# checks using to high lane number (lane 10)
lane_given10_ignore

# checks using forbidden lane
lane_given_disallowed

# checks using forbidden lane
lane_given_disallowed_ignore

# checks using forbidden lane
edge_disallowed

# checks using forbidden lane
edge_disallowed_ignore

# checks using a to high given speed
speed_given100

# checks using a to high given speed
speed_given100_ignore

# checks using a to high given speed (too high for the edge)
speed_given50

# checks using a to high given speed (too high for the edge)
speed_given50_ignore

# checks using fast insertion before a slow lane
slow_lane_ahead

# checks using fast insertion before a slow lane
slow_lane_ahead_ignore
